# tytm

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
src/: env.rs  fsx.rs  main.rs  manifest.rs  registry.json  source.rs
src/cmds/: add.rs  list.rs  remove.rs
tests/: integration_test.rs
