[package]
name = "tytm"
version = "0.4.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
comfy-table = "7.1"
dirs = "5.0"
git2 = "0.20"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.12"
zip = "2.1"
