[package]
name = "tytm"
version = "0.5.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
git2 = "0.20"
octocrab = "0.53"
regex = "1.12"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.12"
tokio = { version = "1.52", features = ["full"] }
zip = "2.1"
